enumset/tests/compile-fail/explicit_repr.stderr
error[E0277]: the trait bound `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:15:5
   |
15 |     EnumSet::<OkayEnumButCantUseFromRepr>::from_repr(1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromRepr`
   |
note: required by a bound in `enumset::EnumSet::<T>::from_repr`
  --> src/lib.rs
   |
   |     where T: EnumSetTypeWithRepr {
   |              ^^^^^^^^^^^^^^^^^^^ required by this bound in `EnumSet::<T>::from_repr`

error[E0277]: the trait bound `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:15:5
   |
15 |     EnumSet::<OkayEnumButCantUseFromRepr>::from_repr(1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromRepr`

error[E0277]: the trait bound `OkayEnumButCantUseFromReprArray: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:16:5
   |
16 |     EnumSet::<OkayEnumButCantUseFromReprArray>::from_repr([1]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromReprArray`
   |
note: required by a bound in `enumset::EnumSet::<T>::from_repr`
  --> src/lib.rs
   |
   |     where T: EnumSetTypeWithRepr {
   |              ^^^^^^^^^^^^^^^^^^^ required by this bound in `EnumSet::<T>::from_repr`

error[E0277]: the trait bound `OkayEnumButCantUseFromReprArray: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:16:5
   |
16 |     EnumSet::<OkayEnumButCantUseFromReprArray>::from_repr([1]);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromReprArray`

error[E0277]: the trait bound `OkayEnumButCantUseFromRepr: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:15:54
   |
15 |     EnumSet::<OkayEnumButCantUseFromRepr>::from_repr(1);
   |                                                      ^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromRepr`

error[E0277]: the trait bound `OkayEnumButCantUseFromReprArray: EnumSetTypeWithRepr` is not satisfied
  --> tests/compile-fail/explicit_repr.rs:16:59
   |
16 |     EnumSet::<OkayEnumButCantUseFromReprArray>::from_repr([1]);
   |                                                           ^^^ the trait `EnumSetTypeWithRepr` is not implemented for `OkayEnumButCantUseFromReprArray`
